finish mapping and retreiving data from firestore server

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,19 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#008080">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+  <script src="https://kit.fontawesome.com/20e3cef666.js" crossorigin="anonymous"></script>
+  <link href="//db.onlinewebfonts.com/c/0035905f200af0732a0724b47a17307e?family=Knockout" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+<style>
+  body {
+    background-color:	#0A0A12;
+    font-family: Knockout;
+  }
+</style>
 </html>
