--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,14 @@
   <title>SlushApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" type="image/x-icon" href="/src/assets/icons/slush.svg">
+  <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#008080">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <script src="https://kit.fontawesome.com/20e3cef666.js" crossorigin="anonymous"></script>
   <link href="//db.onlinewebfonts.com/c/0035905f200af0732a0724b47a17307e?family=Knockout" rel="stylesheet" type="text/css"/>
+  
 </head>
 <body>
   <app-root></app-root>
