--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   <script src="https://kit.fontawesome.com/20e3cef666.js" crossorigin="anonymous"></script>
-  <link href="https://db.onlinewebfonts.com/c/0035905f200af0732a0724b47a17307e?family=Knockout" rel="stylesheet" type="text/css"/>
+  <!-- <link href="https://db.onlinewebfonts.com/c/0035905f200af0732a0724b47a17307e?family=Knockout" rel="stylesheet" type="text/css"/> -->
+  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   
   <link rel="apple-touch-icon" sizes="57x57" href="./assets/icons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./assets/icons/apple-icon-60x60.png">
@@ -38,7 +39,7 @@
 <style>
   body {
     background-color:	#0A0A12;
-    font-family: Knockout;
+    font-family: Osward;
   }
 </style>
 </html>
